--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "pantry-tracker",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3100",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,7 +15,8 @@
     "studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^0.3.6",
+    "@auth/core": "^0.37.0",
+    "@auth/drizzle-adapter": "^1.11.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -21,42 +25,42 @@
     "@tanstack/react-table": "^8.10.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.7",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.292.0",
-    "next": "14.0.3",
-    "next-auth": "^4.24.5",
-    "next-themes": "^0.2.1",
-    "pg": "^8.11.3",
-    "postgres": "^3.4.3",
+    "lucide-react": "^0.468.0",
+    "next": "^15.1.6",
+    "next-auth": "^4.24.10",
+    "next-themes": "^0.4.4",
+    "pg": "^8.13.1",
+    "postgres": "^3.4.5",
     "promise-retry": "^2.0.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
-    "tailwind-merge": "^2.0.0",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^10.0.1",
-    "@types/lodash": "^4.14.201",
-    "@types/node": "^20",
+    "@testing-library/cypress": "^8.0.7",
+    "@types/lodash": "^4.17.15",
+    "@types/node": "^22.10.5",
     "@types/promise-retry": "^1.1.6",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "aws-cdk-lib": "2.101.1",
-    "constructs": "10.2.69",
-    "cypress": "^13.5.1",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "autoprefixer": "^10.4.20",
+    "aws-cdk-lib": "^2.170.0",
+    "constructs": "^10.4.2",
+    "cypress": "^4.2.0",
     "cypress-social-logins": "^1.14.1",
-    "drizzle-kit": "^0.20.2",
-    "drizzle-orm": "^0.29.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
-    "postcss": "^8",
-    "sst": "^2.36.1",
-    "tailwindcss": "^3.3.0",
-    "tsx": "^4.1.3",
-    "typescript": "^5"
+    "drizzle-kit": "^0.31.8",
+    "drizzle-orm": "^0.36.4",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^15.1.6",
+    "postcss": "^8.4.49",
+    "sst": "^3.8.0",
+    "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
   }
 }
