--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@auth/core": "^0.37.0",
+    "@auth/core": "^0.34.3",
     "@auth/drizzle-adapter": "^1.11.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -42,7 +42,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^8.0.7",
+    "@testing-library/cypress": "^10.1.0",
     "@types/lodash": "^4.17.15",
     "@types/node": "^22.10.5",
     "@types/promise-retry": "^1.1.6",
@@ -51,16 +51,21 @@
     "autoprefixer": "^10.4.20",
     "aws-cdk-lib": "^2.170.0",
     "constructs": "^10.4.2",
-    "cypress": "^4.2.0",
+    "cypress": "^15.8.1",
     "cypress-social-logins": "^1.14.1",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.36.4",
     "eslint": "^9.18.0",
     "eslint-config-next": "^15.1.6",
     "postcss": "^8.4.49",
-    "sst": "^3.8.0",
+    "sst": "^3.17.25",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
+  },
+  "overrides": {
+    "esbuild": "^0.25.0",
+    "qs": "^6.14.1",
+    "hono": "^4.11.0"
   }
 }
